--- a/web/themes/custom/new_blog/css/layout.css
+++ b/web/themes/custom/new_blog/css/layout.css
@@ -19,5 +19,8 @@
   grid-gap: 20px;
   grid-template-columns: repeat(2, 1fr);
 }
+.grid-view-2-col .view-content .field--name-title {
+  text-align: center;
+}
 
 /*# sourceMappingURL=layout.css.map */
