--- a/web/themes/custom/new_blog/scss/node.scss
+++ b/web/themes/custom/new_blog/scss/node.scss
@@ -65,6 +65,13 @@
         }
       }
     }
+    &-teaser{
+      max-width: 300px;
+      margin: 0 auto;
+      img{
+        border-radius: 10px;
+      }
+    }
   }
 }
 
