--- a/web/themes/custom/new_blog/scss/layout.scss
+++ b/web/themes/custom/new_blog/scss/layout.scss
@@ -8,6 +8,7 @@
   border-top: 3px solid $gray;
   main{
     flex: 1;
+
   }
   aside{
     max-width: 350px;
@@ -22,7 +23,7 @@
       text-align: center;
     }
     display: grid;
-    grid-gap: $gutterM;
+    grid-gap: $gutterS;
     grid-template-columns: repeat(2, 1fr);
   }
 }
